# AI_assistant

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
ai_assistant/: cli.py  launcher.py  web_server.py
ai_assistant/core/: context.py
ai_assistant/integrations/: calendar_client.py  mail_client.py
ai_assistant/web/templates/: index.html
config/: calendar_config.json
src/: cli.py  launcher.py  web_server.py
src/core/: context.py  logging.py
src/integrations/: calendar_client.py  mail_client.py
tests/: test_calendar_integration.py  test_mail_integration.py  test_mail_sending.py  test_search_functionality.py
