[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "0.1.0"
description = "An AI assistant that integrates with macOS Calendar.app and Mail.app"
authors = [{name = "AI Assistant Contributors", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "assistant", "calendar", "email", "macos", "productivity"]

dependencies = [
    "anthropic>=0.62.0",
    "flask>=3.1.0",
    "flask-socketio>=5.5.0",
    "click>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/chopinx/AI_assistant"
Repository = "https://github.com/chopinx/AI_assistant"
Documentation = "https://github.com/chopinx/AI_assistant#readme"
Issues = "https://github.com/chopinx/AI_assistant/issues"

[project.scripts]
ai-assistant = "ai_assistant.cli:main"
ai-assistant-web = "ai_assistant.web_server:main"

[tool.setuptools]
packages = ["ai_assistant"]
package-dir = {"ai_assistant" = "src"}

[tool.setuptools.package-data]
ai_assistant = ["web/templates/*.html", "config/*.json"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | \.env
    | venv
    | env
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"